@@ -3,58 +3,42 @@ package com.rain.leetcode.hard;
 import java.util.*;
 
 public class Q2732 {
-    int[][] grid;
-    /**
-     [
-     [1,0,0,1,0],
-     [1,0,1,0,1],
-     [0,0,0,0,1],
-     [1,0,1,1,1]
-     ]
 
-     */
     public List<Integer> goodSubsetofBinaryMatrix(int[][] grid) {
-        this.grid = grid;
-        int width = grid[0].length,heigth =grid.length;
-        Map<Integer,Integer> sumMap = new HashMap<>();
-        for (int i = 0; i < heigth; i++) {
-            int sum = 0;
+        int width = grid[0].length, height = grid.length;
+        Map<Integer, Integer> map = new HashMap<>();
+        for (int i = 0; i < height; i++) {
+            int val = 0;
             for (int j = 0; j < width; j++) {
-                sum+=grid[i][j];
+                val = (val << 1 | grid[i][j]);
             }
-            if(sum==0){
-                return Arrays.asList(i);
+            if (val == 0) {
+                return List.of(i);
             }
-            sumMap.put(i,sum);
+            map.put(val, i);
         }
-        for (int i = 0; i < grid.length; i++) {
-            for (int j = i + 1; j < grid.length; j++) {
-                if (sumMap.get(i)+sumMap.get(j)<=width && check(i,j)) {
-                    return Arrays.asList(i, j);
+        for (int key1 : map.keySet()) {
+            for (int key2 : map.keySet()) {
+                if ((key1 & key2) == 0) {
+                    int i = map.get(key1);
+                    int j = map.get(key2);
+                    return i < j ? List.of(i, j) : List.of(j, i);
                 }
             }
         }
-        return new ArrayList<>();
-    }
-
-    private boolean check(int row1,int row2) {
-        for (int i = 0; i < grid[0].length; i++) {
-            if((grid[row1][i]&grid[row2][i])==1){
-                return false;
-            }
-        }
-        return true;
+        return List.of();
     }
 
     public static void main(String[] args) {
         Q2732 q2732  = new Q2732();
-        q2732.goodSubsetofBinaryMatrix(new int[][]
-                {
-                        {1,0,0,1,0},
-                        {1,0,1,0,1},
-                        {0,0,0,0,1},
-                        {1,0,1,1,1}}
-        );
 
+        List<Integer> rs = q2732.goodSubsetofBinaryMatrix(new int[][]{
+                {0, 1, 0, 1, 0},
+                {0, 1, 1, 1, 0},
+                {1, 0, 1, 1, 1},
+                {0, 0, 1, 1, 1},
+                {0, 0, 0, 1, 1},
+                {1, 1, 1, 0, 0}
+        });
     }
 }
